--- a/CS 41/CMakeLists.txt
+++ b/CS 41/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(proj_tester)
 cmake_minimum_required(VERSION 3.22.1)
 
-add_executable(${PROJECT_NAME} week3/project1/src/Program1MarkTikhonov.cpp week3/project1/src/reverse_polish_expression.cpp)
+add_executable(${PROJECT_NAME} week3/project1/Project1MarkTikhonov.cpp)
