put all project2 files into a single .cpp file

--- a/CS 41/CMakeLists.txt
+++ b/CS 41/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(proj_tester)
 cmake_minimum_required(VERSION 3.22.1)
 
-add_executable(${PROJECT_NAME} week5/src/main.cpp week5/src/person.cpp)
+add_executable(${PROJECT_NAME} week5/Project2MarkTikhonov.cpp)
