updated binary search tree implementation for CS 41 project 3

--- a/CS 41/CMakeLists.txt
+++ b/CS 41/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(proj_tester)
 cmake_minimum_required(VERSION 3.22.1)
 
-add_executable(${PROJECT_NAME} week4/binary_search_tree/src/BinarySearchTreeMarkTikhonov.cpp)
+add_executable(${PROJECT_NAME} week6/project3/src/main.cpp)
