added the remaining labs and started project 4

--- a/CS 41/CMakeLists.txt
+++ b/CS 41/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(proj_tester)
 cmake_minimum_required(VERSION 3.22.1)
 
-add_executable(${PROJECT_NAME} week5/Project2MarkTikhonov.cpp)
+add_executable(${PROJECT_NAME} week15/src/main.cpp)
 
 
 add_compile_options(
