updated iterator implementation for list and added custom hash support for hash_table

--- a/CS 41/.vscode/settings.json
+++ b/CS 41/.vscode/settings.json
@@ -67,6 +67,10 @@
           "cfenv": "cpp",
           "typeindex": "cpp",
           "valarray": "cpp",
-          "variant": "cpp"
+          "variant": "cpp",
+          "charconv": "cpp",
+          "format": "cpp",
+          "span": "cpp",
+          "text_encoding": "cpp"
      }
 }
