further improved tests, implementation and utilities

--- a/CS 41/.vscode/settings.json
+++ b/CS 41/.vscode/settings.json
@@ -71,6 +71,10 @@
           "charconv": "cpp",
           "format": "cpp",
           "span": "cpp",
-          "text_encoding": "cpp"
+          "text_encoding": "cpp",
+          "*.ipp": "cpp",
+          "csignal": "cpp",
+          "any": "cpp",
+          "codecvt": "cpp"
      }
 }
