added lecture updates

--- a/CS 38/.vscode/settings.json
+++ b/CS 38/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.referencedLibraries": {
         "include": [
-            "lib/**/*.jar"
+            "lib/**/*.jar",
+            "*/lib/*.java"
         ]
     }
 }
