adding most recent progress on borg interpreter

--- a/CS 41/.vscode/settings.json
+++ b/CS 41/.vscode/settings.json
@@ -75,6 +75,7 @@
           "*.ipp": "cpp",
           "csignal": "cpp",
           "any": "cpp",
-          "codecvt": "cpp"
+          "codecvt": "cpp",
+          "future": "cpp"
      }
 }
