--- a/CS 41/week15/project4/CMakeLists.txt
+++ b/CS 41/week15/project4/CMakeLists.txt
@@ -1,25 +1,32 @@
-cmake_minimum_required(VERSION 3.22.1)
-
-# add the following line in root CMakeLists.txt add_subdirectory(week13/chaining)
-project(ds_tester)
-
 set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests)
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
-set(CMAKE_CXX_STANDARD 17)
 
-find_package(Boost REQUIRED COMPONENTS unit_test_framework)
+add_subdirectory(tests)
+
+project(borg)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
 
 include_directories(${SRC_DIR})
+include_directories(${SRC_DIR}/collections)
+include_directories(${SRC_DIR}/parser)
+include_directories(${SRC_DIR}/utils)
+include_directories(${SRC_DIR}/interpreter)
+include_directories(${SRC_DIR}/interpreter/expressions)
 
-file(GLOB TEST_FILES ${TEST_DIR}/*.cpp)
+file(
+     GLOB SRC_FILES 
+     ${SRC_DIR}/*.cpp
+     ${SRC_DIR}/collections/*.cpp
+     ${SRC_DIR}/parser/*.cpp
+     ${SRC_DIR}/utils/*.cpp
+     ${SRC_DIR}/interpreter/*.cpp
+     ${SRC_DIR}/interpreter/expressions/*.cpp
+)
 
-message(STATUS "TESTING: ${TEST_FILES}")
-add_executable(${PROJECT_NAME} ${TEST_FILES})
+add_executable(${PROJECT_NAME} ${SRC_DIR}/main.cpp ${SRC_FILES})
 
-target_link_libraries(${PROJECT_NAME} Boost::unit_test_framework)
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
-# target_precompile_headers(${PROJECT_NAME} PRIVATE <boost/test/unit_test.hpp>)
+
 target_compile_options(${PROJECT_NAME} PRIVATE 
     -Wall
     -Wextra
@@ -65,7 +72,3 @@ target_compile_options(${PROJECT_NAME} PRIVATE
     -Wmissing-format-attribute
     -Wlarger-than=8192
 )
-
-enable_testing()
-
-add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
