updating week11 material

--- a/CS 38/.vscode/settings.json
+++ b/CS 38/.vscode/settings.json
@@ -4,5 +4,9 @@
             "lib/**/*.jar",
             "*/lib/*.java"
         ]
-    }
+    },
+    "java.project.sourcePaths": [
+        "week10/lecture1/src",
+        "week10/lecture1/lib"
+    ]
 }
