uploading the disgrace of project 4

--- a/CS 41/.vscode/settings.json
+++ b/CS 41/.vscode/settings.json
@@ -76,6 +76,7 @@
           "csignal": "cpp",
           "any": "cpp",
           "codecvt": "cpp",
-          "future": "cpp"
+          "future": "cpp",
+          "hash_set": "cpp"
      }
 }
