--- a/CS 41/CMakeLists.txt
+++ b/CS 41/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.22.1)
 project(proj_tester)
 
-add_subdirectory(week15/project4)
-# add_executable(${PROJECT_NAME} week13/chaining/ChainingMarkTikhonov.cpp)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+add_executable(proj main.cpp)
+# add_executable(${PROJECT_NAME} week10/exam3/src/main.cpp)
 # target_compile_options(${PROJECT_NAME} PRIVATE 
 #     -Wall
 #     -Wextra
